ajustes
-troca da versão do java da aplicação